--- a/.github/workflows/docker_build_push_26.yml
+++ b/.github/workflows/docker_build_push_26.yml
@@ -12,6 +12,8 @@ jobs:
           ref: main
       - name: Set environment variables
         run: echo "GIT_CURRENT_BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
+      - name: Show GITHUB_ENV content
+        run: cat $GITHUB_ENV
       - name: Login to DockerHub Registry
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Run build script
