--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: build
 on:
   push:
     branches:
-      - 26.x
+      - develop
     paths-ignore:
       - '**/*.md'
   pull_request:
@@ -24,22 +24,22 @@ jobs:
       fail-fast: false
       matrix:
         name:
-          - linux-32-bit
+          #- linux-32-bit
           - linux-64-bit
-          - windows-64-bit
-          - macos-64-bit
-          - linux-arm-32-bit
+          #- windows-64-bit
+          #- macos-64-bit
+          #- linux-arm-32-bit
           - linux-arm-64-bit
         include:
-          - name: linux-32-bit
-            host: i686-pc-linux-gnu
-            os: ubuntu-20.04
-            packages: g++-multilib
-            check-security: false
-            check-symbols: false
-            dep-opts: ""
-            config-opts: "--enable-glibc-back-compat LDFLAGS=-static-libstdc++"
-            goal: install
+          # - name: linux-32-bit
+          #   host: i686-pc-linux-gnu
+          #   os: ubuntu-20.04
+          #   packages: g++-multilib
+          #   check-security: false
+          #   check-symbols: false
+          #   dep-opts: ""
+          #   config-opts: "--enable-glibc-back-compat -disable-bench -disable-tests -disable-man --enable-fuzz=no --enable-fuzz-binary=no LDFLAGS=-static-libstdc++"
+          #   goal: install
 
           - name: linux-64-bit
             host: x86_64-pc-linux-gnu
@@ -48,44 +48,44 @@ jobs:
             check-security: false
             check-symbols: false
             dep-opts: ""
-            config-opts: "--enable-sse2 --enable-glibc-back-compat LDFLAGS=-static-libstdc++"
+            config-opts: "--enable-sse2 --enable-glibc-back-compat -disable-bench -disable-tests -disable-man --enable-fuzz=no --enable-fuzz-binary=no LDFLAGS=-static-libstdc++"
             goal: install
 
-          - name: windows-64-bit
-            host: x86_64-w64-mingw32
-            arch: "i386"
-            os: ubuntu-22.04
-            packages: nsis g++-mingw-w64-x86-64 build-essential libtool autotools-dev automake pkg-config bsdmainutils curl git wine-binfmt wine64 wine32
-            postinstall: |
-              sudo update-alternatives --set x86_64-w64-mingw32-gcc /usr/bin/x86_64-w64-mingw32-gcc-posix
-              sudo update-alternatives --set x86_64-w64-mingw32-g++ /usr/bin/x86_64-w64-mingw32-g++-posix
-              sudo update-binfmts --import /usr/share/binfmts/wine
-            check-security: false
-            check-symbols: false
-            dep-opts: ""
-            config-opts: "--enable-sse2 LDFLAGS=-static-libgcc"
-            goal: install
+          # - name: windows-64-bit
+          #   host: x86_64-w64-mingw32
+          #   arch: "i386"
+          #   os: ubuntu-22.04
+          #   packages: nsis g++-mingw-w64-x86-64 build-essential libtool autotools-dev automake pkg-config bsdmainutils curl git wine-binfmt wine64 wine32
+          #   postinstall: |
+          #     sudo update-alternatives --set x86_64-w64-mingw32-gcc /usr/bin/x86_64-w64-mingw32-gcc-posix
+          #     sudo update-alternatives --set x86_64-w64-mingw32-g++ /usr/bin/x86_64-w64-mingw32-g++-posix
+          #     sudo update-binfmts --import /usr/share/binfmts/wine
+          #   check-security: false
+          #   check-symbols: false
+          #   dep-opts: ""
+          #   config-opts: "--enable-sse2 -disable-bench -disable-tests -disable-man --enable-fuzz=no --enable-fuzz-binary=no LDFLAGS=-static-libgcc"
+          #   goal: install
 
-          - name: macos-64-bit
-            host: x86_64-apple-darwin
-            os: ubuntu-22.04
-            packages: curl bsdmainutils cmake libz-dev python3-setuptools libtinfo5 xorriso
-            check-security: false
-            check-symbols: false
-            dep-opts: ""
-            config-opts: "--enable-sse2"
-            goal: deploy
-            sdk: 12.2-12B45b
+          # - name: macos-64-bit
+          #   host: x86_64-apple-darwin
+          #   os: ubuntu-22.04
+          #   packages: curl bsdmainutils cmake libz-dev python3-setuptools libtinfo5 xorriso
+          #   check-security: false
+          #   check-symbols: false
+          #   dep-opts: ""
+          #   config-opts: "--enable-sse2 -disable-bench -disable-tests -disable-man --enable-fuzz=no --enable-fuzz-binary=no"
+          #   goal: deploy
+          #   sdk: 12.2-12B45b
 
-          - name: linux-arm-32-bit
-            host: arm-linux-gnueabihf
-            os: ubuntu-20.04
-            packages: g++-arm-linux-gnueabihf binutils-arm-linux-gnueabihf
-            check-security: false
-            check-symbols: false
-            dep-opts: ""
-            config-opts: "--enable-glibc-back-compat LDFLAGS=-static-libstdc++"
-            goal: install
+          # - name: linux-arm-32-bit
+          #   host: arm-linux-gnueabihf
+          #   os: ubuntu-20.04
+          #   packages: g++-arm-linux-gnueabihf binutils-arm-linux-gnueabihf
+          #   check-security: false
+          #   check-symbols: false
+          #   dep-opts: ""
+          #   config-opts: "--enable-glibc-back-compat -disable-bench -disable-tests -disable-man --enable-fuzz=no --enable-fuzz-binary=no LDFLAGS=-static-libstdc++"
+          #   goal: install
 
           - name: linux-arm-64-bit
             host: aarch64-linux-gnu
@@ -94,7 +94,7 @@ jobs:
             check-security: false
             check-symbols: false
             dep-opts: ""
-            config-opts: "--enable-glibc-back-compat LDFLAGS=-static-libstdc++"
+            config-opts: "--enable-glibc-back-compat -disable-bench -disable-tests -disable-man --enable-fuzz=no --enable-fuzz-binary=no LDFLAGS=-static-libstdc++"
             goal: install
 
     runs-on: ${{ matrix.os }}
@@ -166,14 +166,14 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4.4.0
         with:
-          name: blackmore-${{ github.sha }}-${{ matrix.name }}
+          name: blackcoin-more-develop-${{ github.sha }}-${{ matrix.name }}
           path: |
             depends/${{ matrix.host }}/bin/blackmore*
             dist/Blackmore-Qt.app
           if-no-files-found: error
-          retention-days: 7
+          retention-days: 14
 
       - name: Download artifacts
         uses: actions/download-artifact@v4.1.8
         with:
-          name: blackmore-${{ github.sha }}-${{ matrix.name }}
+         name: blackcoin-more-develop-${{ github.sha }}-${{ matrix.name }}
