--- a/.github/workflows/docker_build_push_develop.yml
+++ b/.github/workflows/docker_build_push_develop.yml
@@ -1,12 +1,12 @@
-name: Build and Push Docker - 26.x
+name: Build and Push Docker - develop
 on: [push]
 jobs:
   test:
-    name: Build and Push Docker - 26.x
+    name: Build and Push Docker - develop
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4.1.7
+        uses: actions/checkout@v4.2.2
         with:
           repository: BlackcoinDev/docker-blk
           ref: main
@@ -17,4 +17,4 @@ jobs:
       - name: Login to DockerHub Registry
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Run build script
-        run: ./gh-build-26.sh
+        run: ./gh-build-26-bdev.sh
